--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -1,5 +1,6 @@
 // colors
 
 $text-color: #333333;
-$background: #f6f6f6;
+$text-second-color: #424242;
+$background-color: #f6f6f6;
 $second-color: #eb5757;
