--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
-@import './components/reset';
 @import './components/variables';
+@import './components/reset';
+@import './components/header';
+@import './components/hero';
