--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,3 +3,5 @@
 @import './components/reset';
 @import './components/header';
 @import './components/hero';
+@import './components/start';
+@import './components/services';
