--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -10,6 +10,7 @@ $second-color: #eb5757;
   color: $second-color;
   margin-bottom: 1rem;
   font-weight: 500;
+  font-size: 1.2rem;
 }
 
 @mixin title {
