--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,7 @@
 @import './components/services';
 @import './components/career';
 @import './components/partners';
+@import './components/office';
+@import './components/project';
+@import './components/contact';
+@import './components/footer';
