--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -35,6 +35,7 @@
       font-weight: 500;
       h4 {
         padding-bottom: 0.5rem;
+        text-align: center;
       }
     }
   }
@@ -53,5 +54,9 @@
         cursor: pointer;
       }
     }
+  }
+  p {
+    padding-top: 1rem;
+    text-align: center;
   }
 }
